<resources>
    <string name="app_name">ReadApp</string>
    <string name="action_settings">Settings</string>

    <string name="bottomsheet_text1">书架</string>
    <string name="bottomsheet_text2">找书</string>
    <string name="bottomsheet_text3">设置</string>

    <string name="top">Top 20</string>
    <string name="classfication1">校园</string>
    <string name="classfication2">都市</string>
    <string name="classfication3">悬疑</string>
    <string name="classfication4">灵异</string>
    <string name="classfication5">玄幻</string>
    <string name="classfication6">仙侠</string>
    <string name="classfication7">历史</string>
    <string name="classfication8">游戏</string>
    <string name="classfication9">科幻</string>
    <string name="classfication10">其他</string>
    <string name="comenext">即将推出</string>

    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="showbitmap">加载图片</string>
    <string name="bitmapon">加载图片：开</string>
    <string name="bitmapoff">加载图片：关</string>
    <string name="clear">清空缓存</string>
    <string name="checkup">检查更新</string>



</resources>
